--- a/index.html
+++ b/index.html
@@ -486,7 +486,7 @@
     <img
       class="w-full object-cover aspect-[4/3] sm:aspect-[16/9]"
       loading="lazy"
-      src="https://images.unsplash.com/photo-1522673607200-164d1b6ce486?q=80&w=1600&auto=format&fit=crop"
+      src="wedding4.jpg"
       alt="Coastal luxury wedding">
   </div>
 
@@ -670,18 +670,18 @@
           <div class="grid grid-cols-2 gap-4 max-w-md mx-auto lg:max-w-none">
             <div class="space-y-4">
               <img class="w-full rounded-2xl shadow-brand aspect-[3/4] object-cover" loading="lazy"
-                src="https://images.unsplash.com/photo-1578662996442-48f60103fc96?q=80&w=800&auto=format&fit=crop"
+                src="flower.jpg"
                 alt="Floral arrangement">
               <img class="w-full rounded-2xl shadow-brand aspect-square object-cover" loading="lazy"
-                src="https://images.unsplash.com/photo-1519225421980-715cb0215aed?q=80&w=800&auto=format&fit=crop"
+                src="wedding1.jpg"
                 alt="Wedding décor">
             </div>
             <div class="space-y-4 pt-8">
               <img class="w-full rounded-2xl shadow-brand aspect-square object-cover" loading="lazy"
-                src="https://images.unsplash.com/photo-1464366400600-7168b8af9bc3?q=80&w=800&auto=format&fit=crop"
+                src="ok.jpg"
                 alt="Boho styling">
               <img class="w-full rounded-2xl shadow-brand aspect-[3/4] object-cover" loading="lazy"
-                src="https://images.unsplash.com/photo-1606800052052-a08af7148866?q=80&w=800&auto=format&fit=crop"
+                src="wedding3.jpg"
                 alt="Luxury setup">
             </div>
           </div>
