--- a/index.html
+++ b/index.html
@@ -375,6 +375,8 @@
           <a href="#love"
             class="nav-link-enhanced py-2 text-gray-700 hover:text-ink transition-colors duration-300">Echoes of
             Love</a>
+          <a href="./gallary.html"
+            class="nav-link-enhanced py-2 text-gray-700 hover:text-ink transition-colors duration-300">Gallery</a>
           <a href="#contact"
             class="nav-link-enhanced py-2 text-gray-700 hover:text-ink transition-colors duration-300">Contact</a>
         </nav>
@@ -480,18 +482,16 @@
         </div>
 
         <div class="relative sa slide-right order-first lg:order-last">
-  <!-- Main image -->
-  <div
-    class="relative rounded-3xl overflow-hidden shadow-brand border-4 border-white/50 sa scale-in max-w-md mx-auto lg:max-w-none">
-    <img
-      class="w-full object-cover aspect-[4/3] sm:aspect-[16/9]"
-      loading="lazy"
-      src="https://images.unsplash.com/photo-1522673607200-164d1b6ce486?q=80&w=1600&auto=format&fit=crop"
-      alt="Coastal luxury wedding">
-  </div>
+          <!-- Main image -->
+          <div
+            class="relative rounded-3xl overflow-hidden shadow-brand border-4 border-white/50 sa scale-in max-w-md mx-auto lg:max-w-none">
+            <img class="w-full object-cover aspect-[4/3] sm:aspect-[16/9]" loading="lazy"
+              src="https://images.unsplash.com/photo-1522673607200-164d1b6ce486?q=80&w=1600&auto=format&fit=crop"
+              alt="Coastal luxury wedding">
+          </div>
 
-  <!-- Secondary image -->
-  <!-- <div class="mt-4 sm:mt-0 sm:absolute sm:-bottom-8 sm:left-8 sa">
+          <!-- Secondary image -->
+          <!-- <div class="mt-4 sm:mt-0 sm:absolute sm:-bottom-8 sm:left-8 sa">
     <div
       class="rounded-2xl overflow-hidden border-4 border-white/80 shadow-mint-glow w-32 sm:w-40 bg-white/20 backdrop-blur-sm mx-auto sm:mx-0">
       <img
@@ -501,7 +501,7 @@
         alt="Boho décor">
     </div>
   </div> -->
-</div>
+        </div>
 
 
       </div>
